<resources>
    <string name="app_name">FindMeHomeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_create_post">Create Post</string>
    <string name="menu_edit_post">Edit Post</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_login">Login</string>
    <string name="menu_post">Post</string>
    <string name="menu_register">Register</string>
    <string name="edit_profile">Edit Profile</string>

    <string-array name="location">
        <item>Center</item>
        <item>North</item>
        <item>South</item>
    </string-array>

    <string-array name="types">
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
    </string-array>

    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>

    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="add_post_menu">Add Post</string>
    <string name="delete_post_edit_post">Delete Post</string>
    <string name="edit_profile_menu">Edit Profile</string>
    <string name="title_activity_intro">IntroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>